fix: fix demo build
- move rollup and ts config for demo to root
- include demo directory in root tsconfig
- update build configs for test and build (exclude demo)

--- a/tsconfig.demo.json
+++ b/tsconfig.demo.json
@@ -1,12 +1,11 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "baseUrl": "./",
-    "outDir": "",
+    "outDir": "demo",
     "declaration": false,
     "declarationMap": false
   },
   "include": [
-    "src/**/*.ts"
+    "demo/**/*.ts"
   ],
 }
