fix: prevent custom element from updating before connectedCallback
* improve scheduleUpdate logic (first update immediately, others in requestAnimationFrame)
* refactor update method to only do updates, move rest to _performUpdate
* fix in-code documentation
* update editorconfig for html, css and json

--- a/.editorconfig
+++ b/.editorconfig
@@ -6,11 +6,11 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 charset = utf-8
 
-[*.{js, ts, html, css, sass, less}]
+[*.{js, ts}]
 indent_style = space
 indent_size = 4
 
-[*.json]
+[*.{html, css, sass, less, json}]
 indent_style = space
 indent_size = 2
 
