--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "custom-element",
+  "name": "component",
   "version": "0.1.0",
-  "description": "A custom element implementation using lit-html.",
+  "description": "A component implementation using lit-html.",
   "types": "lib/index.d.ts",
   "main": "lib/index.cjs.js",
   "module": "lib/index.esm.js",
