chore: update build and release management

--- a/package.json
+++ b/package.json
@@ -2,30 +2,46 @@
   "name": "component",
   "version": "0.1.0",
   "description": "A component implementation using lit-html.",
-  "types": "lib/index.d.ts",
-  "main": "lib/index.cjs.js",
-  "module": "lib/index.esm.js",
+  "keywords": [
+    "web-component",
+    "custom-element",
+    "component",
+    "component-library",
+    "shadow-dom",
+    "lit-html",
+    "decorators",
+    "typescript"
+  ],
+  "author": "Alexander Wende",
+  "license": "BSD-3-Clause",
+  "repository": "github:alexanderwende/component.git",
+  "homepage": "https://github.com/alexanderwende/component#readme",
+  "bugs": "https://github.com/alexanderwende/component/issues",
+  "sideEffects": false,
+  "types": "dist/index.d.ts",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
   "files": [
-    "/lib/",
+    "/dist/",
     "/src/"
   ],
   "scripts": {
-    "prebuild": "rimraf lib",
+    "prebuild": "rimraf ./dist",
     "build": "rollup -c",
-    "pretest": "rimraf dev coverage",
+    "pretest": "rimraf ./dev ./coverage",
     "test": "tsc -p tsconfig.dev.json && karma start karma.config.js",
     "test:watch": "tsc -w -p tsconfig.dev.json & karma start karma.config.js --auto-watch --no-single-run",
-    "prerelease": "npm run test && npm run build && git add lib && git diff-index --quiet HEAD || git commit -m \"chore(build): updating build files\"",
-    "release": "release-it --no-npm.publish",
-    "changelog": "auto-changelog -p --stdout",
-    "beforeStage": "auto-changelog -p",
-    "demo": "rollup -c rollup.demo.config.js -w"
+    "demo": "rollup -c rollup.demo.config.js -w",
+    "predocs": "rimraf ./docs",
+    "docs": "api-extractor run && api-documenter markdown --input-folder ./docs --output-folder ./docs",
+    "prerelease": "npm run test && npm run build",
+    "release": "git add ./dist ./docs && standard-version -a",
+    "release:minor": "npm run release -- --release-as minor",
+    "release:major": "npm run release -- --release-as major",
+    "release:dry": "standard-version --dry-run"
   },
-  "author": "Alexander Wende",
-  "license": "BSD-3-Clause",
   "devDependencies": {
     "@types/jasmine": "^3.3.8",
-    "auto-changelog": "^1.11.0",
     "jasmine-core": "^3.3.0",
     "karma": "^4.0.0",
     "karma-chrome-launcher": "^2.2.0",
@@ -34,7 +50,6 @@
     "karma-mocha-reporter": "^2.2.5",
     "karma-remap-coverage": "^0.1.5",
     "karma-rollup-preprocessor": "^7.0.0",
-    "release-it": "^10.1.0",
     "rimraf": "^2.6.3",
     "rollup": "^1.1.2",
     "rollup-plugin-commonjs": "^9.2.0",
@@ -45,6 +60,7 @@
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-typescript2": "^0.19.2",
+    "standard-version": "^5.0.2",
     "tslint": "^5.12.1",
     "tslint-clean-code": "^0.2.9",
     "typescript": "^3.3.3"
