--- a/.editorconfig
+++ b/.editorconfig
@@ -1,20 +1,20 @@
 root = true
 
 [*]
+charset = utf-8
+indent_style = space
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
-charset = utf-8
 
 [*.{js, ts}]
-indent_style = space
 indent_size = 4
 
 [*.{html, css, sass, less, json}]
-indent_style = space
 indent_size = 2
 
 [*.md]
+max_line_length = off
 trim_trailing_whitespace = false
 
 [Makefile]
