--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,12 +17,12 @@
     "declaration": true,
     /* Generates a sourcemap for each corresponding '.d.ts' file. */
     "declarationMap": true,
-    // "declarationDir": "lib",
+    // "declarationDir": "dist",
     /* Generates corresponding '.map' file. */
     "sourceMap": true,
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
     /* Redirect output structure to the directory. */
-    "outDir": "lib",
+    "outDir": "dist",
     // "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                     /* Enable project compilation */
     // "removeComments": true,                /* Do not emit comments to output. */
