fix: allow import as es6 modules without bundling; do not export lit-html features

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,10 @@
     "baseUrl": "./",
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "paths": {
+      "@partkit/component": ["src"],
+    }
   },
   "include": [
     "src/**/*.ts",
