chore: add karma-typescript for debugging tests

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "pretest": "rimraf ./dev ./coverage",
     "test": "tsc -p tsconfig.dev.json && karma start karma.config.js",
     "test:watch": "tsc -w -p tsconfig.dev.json & karma start karma.config.js --auto-watch --no-single-run",
+    "test:debug": "karma start karma.config.typescript.js --browsers ChromeDebug  --auto-watch --no-single-run",
+    "test:single": "karma start karma.config.typescript.js",
     "demo": "rollup -c rollup.demo.config.js -w",
     "prerelease": "npm run test && npm run build",
     "release": "git add ./dist ./docs && standard-version -a",
@@ -47,6 +49,8 @@
     "karma-mocha-reporter": "^2.2.5",
     "karma-remap-coverage": "^0.1.5",
     "karma-rollup-preprocessor": "^7.0.2",
+    "karma-typescript": "^4.1.1",
+    "karma-typescript-es6-transform": "^4.1.1",
     "lit-html": "^1.1.1",
     "rimraf": "^2.6.3",
     "rollup": "^1.18.0",
