--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "paths": {
-      "@partkit/component": ["src"],
+      "@partkit/component": ["src"]
     }
   },
   "include": [
