--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
       "es2018",
       "dom"
     ],
+    "types": [
+      "jasmine"
+    ],
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
