test(tasks): add tests and docs for task and task-scheduling

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "paths": {
-      "@partkit/component": ["src"]
+      "@partkit/component": ["src"],
+      "@partkit/component/*": ["src/*"]
     }
   },
   "include": [
